
[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "*.git",
  ".github/",
  ".venv/",
  "*.log",
  "*.cache",
  "__pycache__/",
  "*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["concentrations"]

[tool.hatch.version]
path = "concentrations/__init__.py"

[project]
name = "concentrations"
description = "A Calculator for solution concentrations"
authors = [{ name = "Stilian Dimitrov", email = "captndo@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["streamlit>=1.40.1", "pydantic>=2.10.1"]

classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/your_username/word_quiz"
Documentation = "https://github.com/your_username/word_quiz#readme"
Changelog = "https://github.com/your_username/word_quiz/releases"

[tool.hatch.envs.default]
dependencies = ["ruff", "black", "isort", "pyright", "pytest"]
path = ".venv"

[tool.hatch.envs.docs]
dependencies = ["mkdocs-material", "mkdocstrings-python"]
path = ".venv-docs"

[tool.hatch.envs.test]
dependencies = ["pytest", "pytest-cov"]
path = ".venv-test"

[tool.ruff]
exclude = ["__pycache__", ".venv"]
output-format = "github"

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"

[tool.pyright]
reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
ignore = ["**/__pycache__/"]

[tool.coverage.run]
source = ["concentrations"]
relative_files = true

[tool.coverage.report]
omit = ["*.pyc", "concentrations/__main__.py"]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
